@@ -1,3 +1,8 @@
+2016-08-23  Edward Jones  <ed.jones@embecosm.com>
+
+	* lib/Database.cpp: Correct SQL statement to add compilation to
+	the database
+
 2016-08-15  Edward Jones  <ed.jones@embecosm.com>
 
 	* CMakeLists.txt: Add building of GCC standalone driver.
